SonarQube init